<resources>
    <string name="about">About</string>
    <string name="about_message">This software uses map data provided by OpenStreetMap.org</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Exercise Tracker</string>
    <string name="base">OSM base layer</string>
    <string name="base_nl">Netherlands base overlay</string>
    <string name="bing">Bing</string>
    <string name="cacheManagerCancelBody">Do you want to cancel the map download?</string>
    <string name="cacheManagerCancelTitle">Cancel map download</string>
    <string name="cacheManagerCleanFailed">Cleaning failed. %s tiles deleted.</string>
    <string name="cacheManagerCleaningTitle">Cleaning tiles</string>
    <string name="cacheManagerDownloadingTitle">Downloading tiles</string>
    <string name="cacheManagerFailed">Loading completed with %s errors.</string>
    <string name="cacheManagerHandlingMessage">Handling zoom level: %1$s (from %2$s to %3$s)</string>
    <string name="cacheManagerNo">No</string>
    <string name="cacheManagerUnsupportedSource">This online tile source doesn\'t support bulk download</string>
    <string name="cacheManagerYes">Yes</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compass">Compass</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="cyclemap">Cycle Map</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="default_web_client_id">40353237709-cdkd0og3i4ufu5mhtrh9g0un7i67a7g8.apps.googleusercontent.com</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fiets_nl">OpenFietsKaart overlay</string>
    <string name="first_fix_message">Got the first fix</string>
    <string name="format_distance_feet">%s ft</string>
    <string name="format_distance_kilometers">%s km</string>
    <string name="format_distance_meters">%s m</string>
    <string name="format_distance_miles">%s mi</string>
    <string name="format_distance_nautical_miles">%s nm</string>
    <string name="format_distance_only_foot">ft</string>
    <string name="format_distance_only_kilometer">km</string>
    <string name="format_distance_only_meter">m</string>
    <string name="format_distance_only_mile">mi</string>
    <string name="format_distance_only_nautical_mile">nm</string>
    <string name="format_distance_value_unit">%1$s %2$s</string>
    <string name="gcm_defaultSenderId">40353237709</string>
    <string name="google_api_key">AIzaSyA5i_DnEJgUSN5MhUVr7PmM0lSXUJickew</string>
    <string name="google_app_id">1:40353237709:android:22fc221528db802c58b784</string>
    <string name="google_crash_reporting_api_key">AIzaSyA5i_DnEJgUSN5MhUVr7PmM0lSXUJickew</string>
    <string name="google_storage_bucket">exercise-tracker-2936d.firebasestorage.app</string>
    <string name="gym_widget_badge_active">ACTIVE</string>
    <string name="gym_widget_brand">Exercise Tracker</string>
    <string name="gym_widget_description">Shows your next gym day and 30-day attendance.</string>
    <string name="gym_widget_label">Gym tracker</string>
    <string name="gym_widget_open">Tap to open</string>
    <string name="gym_widget_tap_hint">Open app to log gym</string>
    <string name="hills">Hills</string>
    <string name="in_progress">In progress</string>
    <string name="indeterminate">Partially checked</string>
    <string name="m3c_bottom_sheet_collapse_description">Collapse bottom sheet</string>
    <string name="m3c_bottom_sheet_dismiss_description">Dismiss bottom sheet</string>
    <string name="m3c_bottom_sheet_drag_handle_description">Drag handle</string>
    <string name="m3c_bottom_sheet_expand_description">Expand bottom sheet</string>
    <string name="m3c_bottom_sheet_pane_title">Bottom Sheet</string>
    <string name="m3c_date_input_headline">Entered date</string>
    <string name="m3c_date_input_headline_description">Entered date: %1$s</string>
    <string name="m3c_date_input_invalid_for_pattern">Date does not match expected pattern: %1$s</string>
    <string name="m3c_date_input_invalid_not_allowed">Date not allowed: %1$s</string>
    <string name="m3c_date_input_invalid_year_range">Date out of expected year range %1$s - %2$s</string>
    <string name="m3c_date_input_label">Date</string>
    <string name="m3c_date_input_no_input_description">None</string>
    <string name="m3c_date_input_title">Select date</string>
    <string name="m3c_date_picker_headline">Selected date</string>
    <string name="m3c_date_picker_headline_description">Current selection: %1$s</string>
    <string name="m3c_date_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="m3c_date_picker_no_selection_description">None</string>
    <string name="m3c_date_picker_scroll_to_earlier_years">Scroll to show earlier years</string>
    <string name="m3c_date_picker_scroll_to_later_years">Scroll to show later years</string>
    <string name="m3c_date_picker_switch_to_calendar_mode">Switch to calendar input mode</string>
    <string name="m3c_date_picker_switch_to_day_selection">Swipe to select a year, or tap to switch back to selecting a day</string>
    <string name="m3c_date_picker_switch_to_input_mode">Switch to text input mode</string>
    <string name="m3c_date_picker_switch_to_next_month">Change to next month</string>
    <string name="m3c_date_picker_switch_to_previous_month">Change to previous month</string>
    <string name="m3c_date_picker_switch_to_year_selection">Switch to selecting a year</string>
    <string name="m3c_date_picker_title">Select date</string>
    <string name="m3c_date_picker_today_description">Today</string>
    <string name="m3c_date_picker_year_picker_pane_title">Year picker visible</string>
    <string name="m3c_date_range_input_invalid_range_input">Invalid date range input</string>
    <string name="m3c_date_range_input_title">Enter dates</string>
    <string name="m3c_date_range_picker_day_in_range">In range</string>
    <string name="m3c_date_range_picker_end_headline">End date</string>
    <string name="m3c_date_range_picker_scroll_to_next_month">Scroll to show the next month</string>
    <string name="m3c_date_range_picker_scroll_to_previous_month">Scroll to show the previous month</string>
    <string name="m3c_date_range_picker_start_headline">Start date</string>
    <string name="m3c_date_range_picker_title">Select dates</string>
    <string name="m3c_dialog">Dialog</string>
    <string name="m3c_dropdown_menu_collapsed">Collapsed</string>
    <string name="m3c_dropdown_menu_expanded">Expanded</string>
    <string name="m3c_dropdown_menu_toggle">Toggle dropdown menu</string>
    <string name="m3c_search_bar_search">Search</string>
    <string name="m3c_snackbar_dismiss">Dismiss</string>
    <string name="m3c_suggestions_available">Suggestions below</string>
    <string name="m3c_time_picker_am">AM</string>
    <string name="m3c_time_picker_hour">Hour</string>
    <string name="m3c_time_picker_hour_24h_suffix">%1$d hours</string>
    <string name="m3c_time_picker_hour_selection">Select hour</string>
    <string name="m3c_time_picker_hour_suffix">%1$d o\'clock</string>
    <string name="m3c_time_picker_hour_text_field">for hour</string>
    <string name="m3c_time_picker_minute">Minute</string>
    <string name="m3c_time_picker_minute_selection">Select minutes</string>
    <string name="m3c_time_picker_minute_suffix">%1$d minutes</string>
    <string name="m3c_time_picker_minute_text_field">for minutes</string>
    <string name="m3c_time_picker_period_toggle_description">Select AM or PM</string>
    <string name="m3c_time_picker_pm">PM</string>
    <string name="m3c_tooltip_long_press_label">Show tooltip</string>
    <string name="m3c_tooltip_pane_description">Tooltip</string>
    <string name="map_mode">Map Source</string>
    <string name="mapbox">MapBox</string>
    <string name="maplibre_attributionErrorNoBrowser">No web browser installed on device, can\'t open web page.</string>
    <string name="maplibre_attributionsDialogTitle">MapLibre Android</string>
    <string name="maplibre_attributionsIconContentDescription">Attribution icon. Activate to show attribution dialog.</string>
    <string name="maplibre_compassContentDescription">Map compass. Activate to reset the map rotation to North.</string>
    <string name="maplibre_mapActionDescription">Showing a Map created with MapLibre. Scroll by dragging two fingers. Zoom by pinching two fingers.</string>
    <string name="maplibre_myLocationViewContentDescription">Location View. This shows your location on the map.</string>
    <string name="recovery_widget_brand">Exercise Tracker</string>
    <string name="recovery_widget_default_advice">Open app for personalized recovery advice</string>
    <string name="recovery_widget_default_recovery">Recovery status updates here</string>
    <string name="recovery_widget_label">Recovery advice</string>
    <string name="recovery_widget_open">Tap to open app</string>
</resources>